update model foundry notebook

--- a/zero-data-model-foundry.ipynb
+++ b/zero-data-model-foundry.ipynb
@@ -19,7 +19,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
         "---"
       ]
     },
@@ -34,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -72,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -239,10 +238,10 @@
         ")\n",
         "\n",
         "\n",
-        "@cc.service(executor=data_generator_ex, name=\"LLM Data Generator\", volume=volume, auth=False)\n",
+        "@cc.service(executor=data_generator_ex, name=\"LLM Data Generator\", auth=False)\n",
         "def llm_data_generator(model_name):\n",
         "\n",
-        "    \"\"\"Initialize the service that host the data generator LLM.\"\"\"\n",
+        "    \"\"\"Initialize the service that host the data generator LLM\"\"\"\n",
         "\n",
         "    from vllm import LLM\n",
         "\n",
@@ -258,7 +257,7 @@
         "    num_generations=5,\n",
         "    target_items_per_response=5,\n",
         "):\n",
-        "    \"\"\"Generate data using the LLM model with specific parameters.\"\"\"\n",
+        "    \"\"\"Endpoint to generate data using the LLM\"\"\"\n",
         "\n",
         "    from vllm import SamplingParams\n",
         "\n",
@@ -284,15 +283,15 @@
         "    outputs = llm.generate(prompts_batch, params_batch)\n",
         "\n",
         "    # Extract and filter generated data\n",
-        "    texts = []\n",
+        "    data_items = []\n",
         "    for output in outputs:\n",
         "        generated_text = output.outputs[0].text\n",
         "        try:\n",
-        "            texts.extend(json.loads(generated_text))\n",
+        "            data_items.extend(json.loads(generated_text))\n",
         "        except Exception:\n",
         "            continue\n",
         "\n",
-        "    return texts"
+        "    return data_items"
       ]
     },
     {
@@ -954,7 +953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -964,21 +963,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'This ripping action-adventure features stellar effects and a superb lead performance from Owen Teague as a timid simian who must rescue his clan from the clutches of a warlike tribe. ## NO SPOILER'"
+            ]
+          },
+          "execution_count": 59,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "spoiler_agent.generate(\n",
-        "    prompt=\"This ripping action-adventure features stellar effects and a superb lead performance from Owen Teague as a timid simian who must rescue his clan from the clutches of a warlike tribe. ##\"\n",
+        "    prompt=(\n",
+        "        \"This ripping action-adventure features stellar effects and a \"\n",
+        "        \"superb lead performance from Owen Teague as a timid simian \"\n",
+        "        \"who must rescue his clan from the clutches of a warlike tribe. ##\"\n",
+        "    )\n",
         ")\n",
         "# Review of Kingdom of the Planet of the Apes (2024). Scored 90/100. [source: Metacritic]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'SPOILER'"
+            ]
+          },
+          "execution_count": 60,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "spoiler_agent.generate(prompt=\"Add a lot of dull acting -- except Sir Ian McKellen and Andy Serkis -- and you have an uneven movie with yawns aplenty. ##\").split(\"##\")[-1].strip()\n",
         "# Review of The Lord of the Rings: The Return of the King (2003). Scored 0/100. [source: Metacritic]"
@@ -986,18 +1011,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'SPOILER'"
+            ]
+          },
+          "execution_count": 61,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "spoiler_agent.generate(prompt=\"Soylent green is people! ##\").split(\"##\")[-1].strip()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'SPOILER'"
+            ]
+          },
+          "execution_count": 62,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "spoiler_agent.generate(prompt=\"Anyways, at the end you find out that the Planet of The Apes was Earth all along. ##\").split(\"##\")[-1].strip()"
       ]
@@ -1040,7 +1087,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1049,9 +1096,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "I should have never got a pet.\n",
+            "Jerry and I argued about it.\n",
+            "He said, 'No cat bites its own tail.'\n",
+            "But if I had to choose, I would rather get a dog than a cat.\n",
+            "All dogs bite their own tails.\n"
+          ]
+        }
+      ],
       "source": [
         "prompt = \"<|user|>{}</s><|assistant|>\"\n",
         "def correct_grammar(sentence):\n",
@@ -1102,7 +1161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1111,45 +1170,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Dancing with my cat | 🐈💕'"
+            ]
+          },
+          "execution_count": 66,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "emoji_agent.generate(prompt=\"Dancing with my cat | \")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Got a brand new car | 🚗💸'"
+            ]
+          },
+          "execution_count": 67,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "emoji_agent.generate(prompt=\"Got a brand new car | \")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Paint me a scenic mountain, Mr. Ross | 🏔️'"
+            ]
+          },
+          "execution_count": 68,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "emoji_agent.generate(prompt=\"Paint me a scenic mountain, Mr. Ross | \")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "\"Let's eat! | 🍴👅\""
+            ]
+          },
+          "execution_count": 69,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "emoji_agent.generate(prompt=\"Let's eat! | \")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Burning Man | 🔥'"
+            ]
+          },
+          "execution_count": 70,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "emoji_agent.generate(prompt=\"Burning Man | \")"
       ]
